--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,8 +53,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Mobil"
+                android:fontFamily="@font/amaranth"
+                android:text="MOBIL"
                 android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="#666666"
                 android:textSize="12sp"></TextView>
         </LinearLayout>
@@ -79,16 +81,18 @@
                     android:layout_height="60dp"
                     android:src="@drawable/rental_elf_jogja" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/jenisArmada2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="BusBesarHDD"
+                android:fontFamily="@font/amaranth"
+                android:text="MINI BUS KECIL"
                 android:textAlignment="center"
-                android:textSize="12sp"
-                android:textColor="#666666">
-            </TextView>
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -113,49 +117,19 @@
                     android:src="@drawable/home_menu1"
                     app:srcCompat="@drawable/bus_besar_hdd" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Kendaraan 3"
+                android:fontFamily="@font/amaranth"
+                android:text="BUS BESAR HDD"
                 android:textAlignment="center"
-                android:textSize="12sp"
-                android:textColor="#666666">
-            </TextView>
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/menuHome4"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
-            <androidx.cardview.widget.CardView
-                app:cardCornerRadius="30dp"
-                app:cardBackgroundColor="@android:color/transparent"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal">
-
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"
-                    app:srcCompat="@drawable/bus_kecil" />
-            </androidx.cardview.widget.CardView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Kendaraan 4"
-                android:textAlignment="center"
-                android:textSize="12sp"
-                android:textColor="#666666">
-            </TextView>
-        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -166,6 +140,43 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_below="@id/kontenHome1">
+
+        <LinearLayout
+            android:id="@+id/menuHome4"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="30dp">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/home_menu1"
+                    app:srcCompat="@drawable/bus_kecil" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/amaranth"
+                android:text="BUS KECIL"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
+        </LinearLayout>
+
         <LinearLayout
             android:id="@+id/menuHome5"
             android:layout_width="0dp"
@@ -176,28 +187,30 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="71dp"
-                android:layout_height="52dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
                 app:cardBackgroundColor="@android:color/transparent"
                 app:cardCornerRadius="30dp">
 
                 <ImageView
                     android:layout_width="69dp"
-                    android:layout_height="50dp"
+                    android:layout_height="60dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:src="@drawable/home_menu1"
                     app:srcCompat="@drawable/elf_long_1" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Kendaraan 5"
+                android:fontFamily="@font/amaranth"
+                android:text="MINI BUS BESAR"
                 android:textAlignment="center"
-                android:textSize="12sp"
-                android:textColor="#666666">
-            </TextView>
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -207,90 +220,33 @@
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
-                app:cardCornerRadius="30dp"
-                app:cardBackgroundColor="@android:color/transparent"
-                android:layout_width="60dp"
+                android:layout_width="89dp"
                 android:layout_height="60dp"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="30dp">
+
                 <ImageView
-                    android:layout_width="60dp"
+                    android:layout_width="89dp"
                     android:layout_height="60dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"/>
+                    android:src="@drawable/home_menu1"
+                    app:srcCompat="@drawable/bus_besar_biasa_2" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Kendaraan 6"
+                android:fontFamily="@font/amaranth"
+                android:text="BUS BESAR BIASA"
                 android:textAlignment="center"
-                android:textSize="12sp"
-                android:textColor="#666666">
-            </TextView>
-        </LinearLayout>
-
-        <LinearLayout
-        android:id="@+id/menuHome7"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
-        <androidx.cardview.widget.CardView
-            app:cardCornerRadius="30dp"
-            app:cardBackgroundColor="@android:color/transparent"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal">
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/home_menu1"/>
-        </androidx.cardview.widget.CardView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Kendaraan 7"
-            android:textAlignment="center"
-            android:textSize="12sp"
-            android:textColor="#666666">
-        </TextView>
-    </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menuHome8"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
-            <androidx.cardview.widget.CardView
-                app:cardCornerRadius="30dp"
-                app:cardBackgroundColor="@android:color/transparent"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal">
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"/>
-            </androidx.cardview.widget.CardView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Kendaraan 8"
-                android:textAlignment="center"
-                android:textSize="12sp"
-                android:textColor="#666666">
-            </TextView>
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
         </LinearLayout>
 
     </LinearLayout>
