--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,39 +22,35 @@
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_below="@id/toolbarHome">
-
         <LinearLayout
             android:id="@+id/menuHome1"
             android:layout_width="0dp"
-            android:layout_height="110dp"
-            android:layout_margin="5dp"
+            android:layout_height="100dp"
             android:layout_weight="1"
+            android:layout_margin="5dp"
             android:orientation="vertical">
-
             <androidx.cardview.widget.CardView
-                android:layout_width="67dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal"
+                app:cardCornerRadius="30dp"
                 app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="30dp">
-
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal">
                 <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@drawable/grand_livina" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/home_menu1" />
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/jenisArmada1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/amaranth"
-                android:text="MOBIL"
+                android:text="Minibus Big"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="#666666"
@@ -74,21 +70,20 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal">
-
                 <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@drawable/rental_elf_jogja" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/home_menu2" />
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/jenisArmada2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/amaranth"
-                android:text="MINI BUS KECIL"
+                android:text="Minibus Jumbo"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="#666666"
@@ -108,75 +103,68 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal">
-
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"
-                    app:srcCompat="@drawable/bus_besar_hdd" />
+                    android:src="@drawable/home_menu3" />
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/jenisArmada3"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/amaranth"
-                android:text="BUS BESAR HDD"
+                android:text="Minibus Big Jumbo"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="#666666"
                 android:textSize="12sp"></TextView>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/menuHome4"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                app:cardCornerRadius="30dp"
+                app:cardBackgroundColor="@android:color/transparent"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/home_menu4" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/jenisArmada4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/amaranth"
+                android:text="Minibus MC"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/kontenHome2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_below="@id/kontenHome1">
-
-        <LinearLayout
-            android:id="@+id/menuHome4"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal"
-                app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="30dp">
-
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"
-                    app:srcCompat="@drawable/bus_kecil" />
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/amaranth"
-                android:text="BUS KECIL"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="#666666"
-                android:textSize="12sp"></TextView>
-        </LinearLayout>
-
         <LinearLayout
             android:id="@+id/menuHome5"
             android:layout_width="0dp"
@@ -184,29 +172,26 @@
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:orientation="vertical">
-
             <androidx.cardview.widget.CardView
-                android:layout_width="71dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal"
+                app:cardCornerRadius="30dp"
                 app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="30dp">
-
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal">
                 <ImageView
-                    android:layout_width="69dp"
-                    android:layout_height="60dp"
-                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"
-                    app:srcCompat="@drawable/elf_long_1" />
+                    android:src="@drawable/home_menu5" />
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/jenisArmada5"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/amaranth"
-                android:text="MINI BUS BESAR"
+                android:text="Mobil"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="#666666"
@@ -220,35 +205,97 @@
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:orientation="vertical">
-
             <androidx.cardview.widget.CardView
-                android:layout_width="89dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal"
+                app:cardCornerRadius="30dp"
                 app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="30dp">
-
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal">
                 <ImageView
-                    android:layout_width="89dp"
-                    android:layout_height="60dp"
-                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"
-                    app:srcCompat="@drawable/bus_besar_biasa_2" />
+                    android:src="@drawable/home_menu6" />
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/jenisArmada6"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/amaranth"
-                android:text="BUS BESAR BIASA"
+                android:text="Big Bus SHD"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="#666666"
                 android:textSize="12sp"></TextView>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/menuHome7"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                app:cardCornerRadius="30dp"
+                app:cardBackgroundColor="@android:color/transparent"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/home_menu7" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/jenisArmada7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/amaranth"
+                android:text="Big Bus MD"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/menuHome8"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                app:cardCornerRadius="30dp"
+                app:cardBackgroundColor="@android:color/transparent"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/home_menu8" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/jenisArmada8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/amaranth"
+                android:text="Big Bus HDD"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
