--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -5,18 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityLogin">
+    tools:context=".ActivitySignin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="420dp"
-            android:background="@drawable/acc_login"
-            app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="420dp"
+        android:background="@drawable/acc_login">
         <androidx.cardview.widget.CardView
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -25,14 +20,12 @@
             app:cardBackgroundColor="@android:color/white"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="30dp"
-            android:layout_gravity="center">
+            android:layout_margin="30dp">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/logo_travel" />
         </androidx.cardview.widget.CardView>
         <TextView
@@ -78,7 +71,7 @@
                     android:backgroundTint="@android:color/black"
                     android:background="@drawable/icon_username" />
                 <EditText
-                    android:id="@+id/textUsername"
+                    android:id="@+id/textEmail"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_margin="10dp"
@@ -112,7 +105,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnSignin"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
