--- a/app/src/main/res/layout/activity_armada.xml
+++ b/app/src/main/res/layout/activity_armada.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:text="Kendaraan"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
             android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
