--- a/app/src/main/res/layout/card_armada.xml
+++ b/app/src/main/res/layout/card_armada.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="3dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5dp"
     android:background="@drawable/card_border"
@@ -11,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,10 +54,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
+                android:fontFamily="@font/amethysta"
+                android:gravity="center_vertical"
                 android:text="Grand Livina X-Gear"
                 android:textColor="@android:color/black"
-                android:textSize="22dp"
-                android:textStyle="bold" />
+                android:textSize="16dp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="133dp"
+                tools:layout_editor_absoluteY="110dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -63,46 +69,62 @@
                 android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
                 <TextView
-                    android:text="Tahun "
-                    android:textSize="20dp"
-                    android:textColor="@color/colorPrimary"
-                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/tahunArmada"
-                    android:text="2014"
-                    android:textSize="20dp"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:fontFamily="@font/amethysta"
                     android:gravity="center_vertical"
-                    android:layout_marginRight="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:text="Tahun"
+                    android:textColor="@color/colorPrimary"
+                    tools:layout_editor_absoluteX="133dp"
+                    tools:layout_editor_absoluteY="136dp" />
 
                 <TextView
-                    android:text="Jumlah Unit : "
-                    android:textSize="20dp"
-                    android:textColor="@color/colorPrimary"
-                    android:gravity="center_vertical"
+                    android:id="@+id/tahunArmada"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="30dp"
+                    android:fontFamily="@font/amethysta"
+                    android:gravity="center_vertical"
+                    android:text="2014"
+                    android:textColor="@color/colorPrimary"
+                    tools:layout_editor_absoluteX="133dp"
+                    tools:layout_editor_absoluteY="136dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:fontFamily="@font/amethysta"
+                    android:gravity="center_vertical"
+                    android:text="Jumlah Unit :"
+                    android:textColor="@color/colorPrimary"
+                    tools:layout_editor_absoluteX="133dp"
+                    tools:layout_editor_absoluteY="136dp" />
 
                 <TextView
                     android:id="@+id/jumlahArmada"
-                    android:text="5"
-                    android:textSize="20dp"
-                    android:textColor="@color/colorPrimary"
-                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/amethysta"
+                    android:gravity="center_vertical"
+                    android:text="2014"
+                    android:textColor="@color/colorPrimary"
+                    tools:layout_editor_absoluteX="133dp"
+                    tools:layout_editor_absoluteY="136dp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/deskripsiArmada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:fontFamily="@font/amethysta"
+                android:gravity="center_vertical"
                 android:text="Deskripsi"
-                android:textSize="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:textColor="#070707"
+                tools:layout_editor_absoluteX="133dp"
+                tools:layout_editor_absoluteY="136dp" />
 
         </LinearLayout>
     </LinearLayout>
