--- a/app/src/main/res/layout/fragment_aktivitas.xml
+++ b/app/src/main/res/layout/fragment_aktivitas.xml
@@ -31,7 +31,7 @@
             tools:layout_editor_absoluteX="37dp"
             tools:layout_editor_absoluteY="212dp" />
 
-        <EditText
+        <TextView
             android:id="@+id/pemesanAktivitas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
